# scan3d-capture

./: .gitignore  CMakeLists.txt  README.md  to_json.py
cmake/Modules/: FindSpinnaker.cmake
forms/: CameraConfigurationDialog.ui  CaptureDialog.ui  MainWindow.ui
project/: scan3d-capture.pro
src/: AboutDialog.cpp  Application.cpp  Application.hpp  CalibrationData.cpp  CalibrationData.hpp  CameraConfigurationDialog.cpp  CameraConfigurationDialog.hpp  CaptureDialog.cpp  CaptureDialog.hpp  ImageLabel.hpp  MainWindow.cpp  MainWindow.hpp  ProjectorWidget.cpp  ProjectorWidget.hpp  VideoInput.cpp  VideoInput.hpp  cognex_util.hpp  im_util.hpp  io_util.hpp  main.cpp  scan3d.cpp  scan3d.hpp  structured_light.cpp  structured_light.hpp
